asterisk (1:1.4.21.1~dfsg-1) UNRELEASED; urgency=low

  * New upstream bugfix release.

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Mon, 30 Jun 2008 20:46:07 +0300

asterisk (1:1.4.21~dfsg-1) unstable; urgency=low

  * New upstream release. 
  * bison no longer needed to build Asterisk (Since 1.4.0).
  * Patch armel_support applied upstream.
  * Patches bristuff/zapata-gsm and bristuff/zapata-bri+euroisdn adjusted to 
    chan_zap changes (conf became a pointer in mkintf).

 -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Thu, 12 Jun 2008 21:30:40 +0300

asterisk (1:1.4.20~dfsg-1) unstable; urgency=low

  [ Victor Seva ]
  * Patch sample files pointing now to the correct doc files. (Closes: #475681)
  * Added support for armel, thanks to Riku Voipio. (Closes: #477389)
  * Added asterisk-config.dirs in order to create etc/asterisk/manager.d dir,
    and added a README.conf on it on rule install-indep.

  [ Tzafrir Cohen ]
  * Provide /usr/include/asterisk.h as well (through a symlink).
  * Remove {,} bashism from debian/rules (Closes: #478361). 

  [ Faidon Liambotis ]
  * New upstream version.
    - Fix IAX performance issues introduced by security fix in 1.4.19.1
    - Dropped patches samples, vpb-driver-4.2.18, vpb_no_cards, incorporated
      by upstream.
  * Update to bristuff-0.4.0-RC1:
    - Revert API changes to res_agi (xagi).
    - Revert API changes to ast_sendtext() (ast-send-message).
    - Merge several chan_zap changes (zapata-bri+euroisdn, zapata-gsm).
    - Remove unused zapata-device-state, feature-parking_con, find-feature,
      chan-capi, ast_channel_masquerade_locked, find-feature patches,
      obsoleted by upstream.
    - Remove uniqueid-01-use-pid-on-uniqueid-generation patch, dropped by
      upstream.
    - Rename app-zapras-fix-audiomode to isdn-fixes and include another fix
      that we dropped earlier by mistake (r5162).
    - Merge ast-send-message with ast-send-message-users, following upstream
      split.