@@ -232,6 +232,12 @@ get-orig-source:
 	@@rm -f  $(TMP_TARBALL_TOP)/sounds/fpm-*.mp3
 	@@rm -f  $(TMP_TARBALL_TOP)/sounds/asterisk-moh-freeplay-wav.tar.gz
 	@@rm -rf $(TMP_TARBALL_TOP)/codecs/ilbc/*
+	# in case the tarball is not clean:
+	@@rm -rf $(TMP_TARBALL_TOP)/*/.makeopts
+	@@rm -rf $(TMP_TARBALL_TOP)/*/.*.makeopts
+	@@rm -rf $(TMP_TARBALL_TOP)/*/.moduleinfo
+	@@rm -rf $(TMP_TARBALL_TOP)/*/.*.moduleinfo
+	@@rm -rf $(TMP_TARBALL_TOP)/menuselect-tree
 	@@printf "all:\nclean:\n.PHONY: all clean\n" > \
 		$(TMP_TARBALL_TOP)/codecs/ilbc/Makefile
 	@@rm -f  $(TMP_TARBALL_TOP)/codecs/codec_ilbc.c
