@@ -1,6 +1,7 @@
 asterisk (1:1.4.21.1~dfsg-1) UNRELEASED; urgency=low
 
   * New upstream bugfix release.
+  * Fix get-orig-source target to remove temporary files left in that tarball.
 
  -- Tzafrir Cohen <tzafrir.cohen@xorcom.com>  Mon, 30 Jun 2008 20:46:07 +0300
 
